--- a/.github/workflows/sync-oss.yml
+++ b/.github/workflows/sync-oss.yml
@@ -1,12 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Sync to Aliyun OSS
+name: sync-to-aliyun-oss
 
 # Controls when the workflow will run
 on:
+  workflow_dispatch:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: 
+      - main
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
